tests/NormalTests/paczka1/small_fuzzy/13884844.err
Error in line 2: A944 A944 76,63
Error in line 8: HT1jn5 S416 19,9
Error in line 13: NnA7mZy S136 91,6
